<resources>
    <string name="app_name">OnlineJobPortal</string>
    <string name="title_activity_home_drawer">HomeDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_upload_job">Upload Job</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_share">Share</string>
    <string name="menu_posted_job">Posted Jobs</string>
    <string name="title_activity_start_main">StartMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_jobs">Jobs</string>
    <string name="title_users">Users</string>
    <string name="title_activity_home_drawer_company">HomeDrawerActivityCompany</string>

    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_email">Email</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_hiring_req">Hiring Requests</string>
    <string name="menu_applying_req">Applyer Requests</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_about_us">About Us</string>
    <string name="web_client_id">811434146884-dfpl38h3r7n8u0ijmjbq1us0527insg9.apps.googleusercontent.com</string>

    <string name="facebook_app_id">440410409970714</string>
    <string name="fb_login_protocol_scheme">fb440410409970714</string>


</resources>
