<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_hiring_req"
            android:icon="@drawable/ic_hiring_requests_black_24dp"
            android:title="@string/menu_hiring_req" />

        <item
            android:id="@+id/nav_applying_req"
            android:icon="@drawable/ic_applier_reqests_black_24dp"
            android:title="@string/menu_applying_req" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_contact_us_black_24dp"
                android:title="@string/menu_contact_us" />

            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/menu_about_us" />
        </menu>
    </item>

</menu>
